Improved beach view

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,5 @@
     <string name="sky">Sky conditions</string>
     <string name="morning">Morning</string>
     <string name="change_language">Change language</string>
+    <string name="beach_icon">Beach icon</string>
 </resources>
