--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -18,4 +18,5 @@
     <string name="sky">Estado del cielo</string>
     <string name="morning">Mañana</string>
     <string name="change_language">Cambiar idioma</string>
+    <string name="beach_icon">Beach icon</string>
 </resources>
