--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -23,4 +23,5 @@
     <string name="humidity">"Humedad: "</string>
     <string name="minimum_and_maximum">"Min y max: "</string>
     <string name="temperature">Temperatura:</string>
+    <string name="transport">Transportes</string>
 </resources>
